--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
 
     <div class="ui bottom attached active tab ">
-        <div class="ui bottom attached tab" data-tab="first">
+        <div class="ui bottom attached active tab" data-tab="first">
             <div class="layout">
 
                 <!-- left -->
@@ -377,7 +377,7 @@
 
         <!-- Sort Exention -->
         <!-- ====================================================== -->
-        <div class="ui bottom attached tab active" data-tab="sortEx">
+        <div class="ui bottom attached tab" data-tab="sortEx">
             <div class="ui container" style="margin-top: 20px">
                 <form class="ui form small">
                     <div class="field">
