--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="url" content="https:khaw.life">
     <meta name="keywords" content="URL Decoder, Decode URL to JSON, URL to JSON Converter, JSON Saver from URL, Web URL Decoder, Online URL Decoder, Decode URL Parameters to JSON, URL Parser and JSON Saver,jex, jex framework, json diff,
      khaw json, URL Decoding Tool, Convert URL to JSON Online, Decode URI to JSON, kosign url decode, URL Decode, URL, Web Tool for URL Decoding, URL DECODE, JSON FORMAT,
@@ -54,7 +54,7 @@
 
     </div>
     <div>
-        <div class="ui secondary menu inverted mini" style="background-color: #2662e3; padding: 3px 20px; margin: 0">
+        <div class="ui secondary menu inverted mini" style="background-color: #2662e3; overflow-x: auto; padding: 3px 20px; margin: 0">
             <div class="active item" data-tab="first">URL Decode</div>
             <div class="item" data-tab="jsondiff">JSON Diff</div>
             <div class="item" data-tab="transformtools">Transform</div>
@@ -515,7 +515,7 @@
                                     <input type="file" id="file_up" style="display: none;" accept="audio/*,video/*">
                                 </div>
                                 <div class="field">
-                                    <button class="ui button icon play" style="margin-left: 15px;" disabled
+                                    <button class="ui button icon play" disabled
                                         id="btn_play"><i class="play icon"></i></button>
                                 </div>
                             </div>
@@ -531,13 +531,13 @@
                         </div>
 
                         <div class="fields">
-                            <div class="two wide field">
+                            <div class="three wide field">
                                 <label>Duration <i id="btn_minus" class="minus icon grey"
                                         style="margin-left: 19px; margin-right: 10px;"></i> <i class="plus icon grey"
                                         id="btn_plus"></i></label>
                                 <textarea id="timer" rows="10"></textarea>
                             </div>
-                            <div class="fifteen wide field">
+                            <div class="thirteen wide field">
                                 <label>Lyric</label>
                                 <textarea id="lyric" rows="10"></textarea>
                             </div>
