--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                             <div class="field">
                                 <label>Youtube link</label>
                                     <div class="ui left action input">
-                                        <div class="ui icon button">
+                                        <div class="ui icon button" onclick="openYouTube()">
                                             <i class="youtube icon"></i>
                                         </div>
                                         <input type="text" id="youtubeUrl" placeholder="You can past youtube video link here">
