--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
                             <label id="title_l_u"></label>
                             <div class="local_media">
                                 <audio id="audioPlayer" controls style="display:none;"></audio>
-                                <video id="videoPlayer" controls style="display:none;" width="640" height="480"></video>
+                                <video id="videoPlayer" controls style="display:none;" width="100%"></video>
                             </div>
                             <div id="you_block">
                                 <div id="youtube_ifr"></div>
@@ -577,9 +577,9 @@
                         </div>
                         <ul class="list">
                             <li>Paste lyric into lryic box and make newline for each sentence</li>
-                            <li>First upload viedo or music file</li>
+                            <li>Upload viedo or music file or paste the youtube link.</li>
                             <li>Click play to start</li>
-                            <li>Click pin time</li>
+                            <li>Click pin time or input by yourself.</li>
                             <li>Choose type music lyric or video subtitle</li>
                         </ul>
                     </div>
@@ -590,7 +590,7 @@
                         </div>
                         <ul class="list">
                             <li>Save file name will follow the file upload's name.</li>
-                            <li>The save file and the music or video must have the name and in the same path.</li>
+                            <li>The save file and the music or video must have the same name and in the same path.</li>
                             <li>You can click Esc key to pin.</li>
                         </ul>
                     </div>
