--- a/index.html
+++ b/index.html
@@ -551,13 +551,13 @@
                         <div class="fields">
                             <textarea id="grid_line" rows="10"></textarea>
                             <div class="field" style="width: 150px;" id="duration_field">
-                                <label>Duration <i id="btn_minus" class="minus icon grey"
-                                        style="margin-left: 19px; margin-right: 10px;"></i> <i class="plus icon grey"
+                                <label> <label data-tooltip="Audio has only time start \nVideo has time start and time end" data-inverted="" data-position="top left"><i class="grey question circle outline icon"></i></label> Duration <i id="btn_minus" class="minus icon grey"
+                                        style="margin-left: 10px; margin-right: 10px;"></i> <i class="plus icon grey"
                                         id="btn_plus"></i></label>
                                 <textarea id="timer" rows="10" style="resize: none;"></textarea>
                             </div>
                             <div class="fourteen wide field">
-                                <label>Lyric</label>
+                                <label><label data-tooltip="If you want italic use: <i>text...</i> (only .src)" data-inverted="" data-position="top left"><i class="question circle outline icon grey"></i></label>  Lyric</label>
                                 <textarea id="lyric" rows="10"></textarea>
                             </div>
                         </div>
