--- a/index.html
+++ b/index.html
@@ -604,6 +604,7 @@
     <script src="data/dataStorage.js"></script>
     <script src="util/util.js"></script>
 
+    <!-- components -->
     <script src="components/nav_bar/nav_bar.js"></script>
     <script src="components/decode/decode.js"></script>
     <script src="components/jex_convert/jex223.js"></script>
