add compare on decode

--- a/index.html
+++ b/index.html
@@ -192,13 +192,14 @@
 
                         </div>
                         <div class="mt_20">
-                            <div style="display: grid; grid-template-columns: auto 30px;">
+                            <div style="display: grid; grid-template-columns: auto auto;">
                                 <div>
                                     <h4 id="box_fixed_active_text" class="m_p_0" active-json-id="">Result</h4>
                                     <small class="text_fixed_color" id="box_fixed_active_date">Click on menu above to show</small>
                                 </div>
 
-                                <div>
+                                <div style="text-align: right;">
+                                    <button class="ui button tiny btn_color_light disabled" id="btn_compare_json">Compare</button>
                                     <div class="ui icon buttons tiny right floated">
                                         <button data-tooltip="Format" data-inverted="" class="ui icon button tiny btn_color_light btn_format2"><i class="magic icon"></i></button>
 
